# safeda-aam

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
packaging/: pyinstaller_entry.py
safeda_aam/: catalog.py  classify.py  cli.py  naming.py  util.py
